--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "publisher": "ntnyq",
   "name": "vscode-eslint-command",
   "displayName": "ESLint Command",
+  "preview": true,
   "type": "commonjs",
   "version": "0.0.0",
   "private": true,
-  "preview": true,
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.10.0",
   "description": "VSCode support for eslint-plugin-command",
   "keywords": [],
   "license": "MIT",
@@ -18,9 +18,6 @@
   "repository": "ntnyq/vscode-eslint-command",
   "main": "./dist/index.js",
   "icon": "./res/logo.png",
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "build": "tsup",
     "dev": "NODE_ENV=development tsup --watch",
@@ -33,22 +30,24 @@
     "typecheck": "tsc --noEmit",
     "vscode:prepublish": "pnpm run build"
   },
+  "dependencies": {
+    "reactive-vscode": "^0.2.2"
+  },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^3.0.0-beta.6",
+    "@ntnyq/eslint-config": "^3.0.0-beta.10",
     "@ntnyq/prettier-config": "^1.21.2",
     "@types/node": "^22.5.4",
     "@types/vscode": "^1.93.0",
     "@vscode/vsce": "^3.1.0",
     "bumpp": "^9.5.2",
-    "eslint": "^9.9.1",
-    "husky": "^9.1.5",
+    "eslint": "^9.10.0",
+    "husky": "^9.1.6",
     "nano-staged": "^0.8.0",
-    "pnpm": "^9.9.0",
+    "pnpm": "^9.10.0",
     "prettier": "3.3.3",
-    "reactive-vscode": "^0.2.2",
     "tsup": "^8.2.4",
-    "tsx": "^4.19.0",
-    "typescript": "^5.5.4",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2",
     "vscode-ext-gen": "^0.4.3"
   },
   "activationEvents": [
