--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "publisher": "ntnyq",
-  "name": "vscode-eslint-command",
+  "name": "eslint-command",
   "displayName": "ESLint Command",
   "preview": true,
   "type": "commonjs",
@@ -14,8 +14,8 @@
     "name": "ntnyq",
     "email": "ntnyq13@gmail.com"
   },
-  "homepage": "https://github.com/ntnyq/vscode-eslint-command",
-  "repository": "ntnyq/vscode-eslint-command",
+  "homepage": "https://github.com/ntnyq/eslint-command",
+  "repository": "ntnyq/eslint-command",
   "main": "./dist/index.js",
   "icon": "./res/logo.png",
   "scripts": {
@@ -34,9 +34,9 @@
     "reactive-vscode": "^0.2.2"
   },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^3.0.0-beta.10",
+    "@ntnyq/eslint-config": "^3.0.0-beta.12",
     "@ntnyq/prettier-config": "^1.21.2",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "@types/vscode": "^1.93.0",
     "@vscode/vsce": "^3.1.0",
     "bumpp": "^9.5.2",
@@ -59,12 +59,25 @@
   "contributes": {
     "commands": [],
     "configuration": {
-      "title": "Enable extension",
+      "title": "ESLint Command",
       "properties": {
-        "vscode-eslint-command.enable": {
+        "eslint-command.enable": {
           "type": "boolean",
           "default": true,
           "description": "Enable extension"
+        },
+        "eslint-command.languages": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "default": [
+            "javascript",
+            "javascriptreact",
+            "typescript",
+            "typescriptreact"
+          ],
+          "description": "Languages to enable command decorations"
         }
       }
     }
@@ -73,7 +86,7 @@
     "Other"
   ],
   "bugs": {
-    "url": "https://github.com/ntnyq/vscode-eslint-command/issues/new"
+    "url": "https://github.com/ntnyq/eslint-command/issues/new"
   },
   "engines": {
     "vscode": "^1.93.0"
