--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "email": "ntnyq13@gmail.com"
   },
   "homepage": "https://github.com/ntnyq/eslint-command",
-  "repository": "ntnyq/eslint-command",
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/ntnyq/eslint-command.git"
+  },
   "main": "./dist/index.js",
   "icon": "./res/logo.png",
   "scripts": {
