--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "reactive-vscode": "^0.2.9"
   },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^3.11.0",
+    "@ntnyq/eslint-config": "^3.12.0",
     "@ntnyq/prettier-config": "^1.22.1",
     "@types/node": "^22.10.5",
     "@types/vscode": "^1.96.0",
     "@vscode/vsce": "^3.2.1",
-    "bumpp": "^9.9.2",
+    "bumpp": "^9.10.0",
     "eslint": "^9.17.0",
     "husky": "^9.1.7",
     "nano-staged": "^0.8.0",
@@ -65,14 +65,11 @@
     "prettier": "3.4.2",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "vscode-ext-gen": "^0.5.5"
   },
   "activationEvents": [
-    "onLanguage:javascript",
-    "onLanguage:javascriptreact",
-    "onLanguage:typescript",
-    "onLanguage:typescriptreact"
+    "onStartupFinished"
   ],
   "contributes": {
     "commands": [
@@ -174,6 +171,7 @@
           "default": [
             "javascript",
             "javascriptreact",
+            "markdown",
             "typescript",
             "typescriptreact"
           ],
@@ -181,7 +179,8 @@
           "items": {
             "type": "string"
           },
-          "type": "array"
+          "type": "array",
+          "uniqueItems": true
         }
       },
       "title": "ESLint Command"
@@ -191,7 +190,7 @@
     "Other"
   ],
   "engines": {
-    "vscode": "^1.96.2"
+    "vscode": "^1.96.0"
   },
   "nano-staged": {
     "*.{js,ts,mjs,cjs,md,json,yml,yaml}": "eslint --fix"
