--- a/package.json
+++ b/package.json
@@ -81,10 +81,36 @@
     ],
     "configuration": {
       "properties": {
-        "eslint-command.annotationColor": {
-          "default": "rgb(255, 189, 42)",
-          "description": "Color of annotation",
-          "type": "string"
+        "eslint-command.annotation": {
+          "additionalProperties": false,
+          "description": "ESLint command annotation",
+          "properties": {
+            "before": {
+              "additionalProperties": false,
+              "properties": {
+                "contentText": {
+                  "default": "🚀",
+                  "type": "string"
+                },
+                "margin": {
+                  "default": "0 0.5em 0 0",
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            },
+            "color": {
+              "default": "rgb(255, 189, 42)",
+              "description": "Color of annotation",
+              "format": "color",
+              "type": "string"
+            },
+            "cursor": {
+              "default": "pointer",
+              "type": "string"
+            }
+          },
+          "type": "object"
         },
         "eslint-command.commands": {
           "default": [],
