--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
-  "prettier.enable": true,
   "eslint.enable": true,
+  "prettier.enable": true,
   "editor.formatOnSave": true,
+  "prettier.configPath": "./prettier.config.mjs",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "never",
+    "source.sortImports": "never"
+  },
   "eslint.validate": [
     "vue",
-    "html",
     "json",
     "toml",
     "jsonc",
@@ -15,7 +21,16 @@
     "javascriptreact",
     "typescriptreact"
   ],
-  "cSpell.words": ["bumpp", "changelogithub", "forof", "hreg", "npmrc", "ofetch", "pnpm", "tsup"],
+  "cSpell.words": [
+    "bumpp",
+    "changelogithub",
+    "forof",
+    "hreg",
+    "npmrc",
+    "ofetch",
+    "pnpm",
+    "tsup"
+  ],
   "emeraldwalk.runonsave": {
     "commands": [
       {
