--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "lint": "eslint .",
     "pack": "vsce package --no-dependencies",
     "prepare": "husky",
-    "publish": "vsce publish --no-dependencies",
     "release": "run-s release:check release:version release:publish",
     "release:build": "run-s generate:meta build",
     "release:check": "run-s lint typecheck",
@@ -221,7 +220,9 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "@vscode/vsce-sign",
+      "esbuild",
+      "keytar"
     ],
     "overrides": {
       "esbuild": "^0.25.0"
