--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "ESNext",
     "lib": ["ESnext"],
     "module": "ESNext",
     "moduleResolution": "node",
     "types": ["node"],
     "resolveJsonModule": true,
+    "erasableSyntaxOnly": true,
+    "libReplacement": false,
     "sourceMap": true,
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
     "esModuleInterop": true,
     "strict": true,
     "strictNullChecks": true,
