build: migrate to tsdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,8 @@
     "npmrc",
     "ofetch",
     "pnpm",
-    "tsup"
+    "tsdown",
+    "unrs"
   ],
   "emeraldwalk.runonsave": {
     "commands": [
