--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,8 +2,9 @@ packages:
   - .
   - playground
 overrides:
-  esbuild: ^0.25.2
+  esbuild: ^0.25.4
 onlyBuiltDependencies:
   - '@vscode/vsce-sign'
   - esbuild
   - keytar
+  - unrs-resolver
