--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "res/*"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "NODE_ENV=development tsup --watch",
+    "build": "tsdown",
+    "dev": "NODE_ENV=development tsdown --watch",
     "generate:meta": "vscode-ext-gen --output src/meta.ts",
     "lint": "eslint",
     "pack": "vsce package --no-dependencies",
@@ -50,9 +50,9 @@
     "reactive-vscode": "^0.2.14"
   },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^4.1.0",
+    "@ntnyq/eslint-config": "^4.2.0",
     "@ntnyq/prettier-config": "^2.0.0",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.16",
     "@types/vscode": "^1.99.1",
     "@vscode/vsce": "^3.3.2",
     "bumpp": "^10.1.0",
@@ -62,7 +62,7 @@
     "npm-run-all2": "^8.0.1",
     "pnpm": "^10.10.0",
     "prettier": "3.5.3",
-    "tsup": "^8.4.0",
+    "tsdown": "^0.11.1",
     "typescript": "^5.8.3",
     "vscode-ext-gen": "^1.0.2"
   },
