--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.28.0",
+  "packageManager": "pnpm@10.28.2",
   "description": "VSCode support for eslint-plugin-command",
   "keywords": [
     "eslint-command"
@@ -34,35 +34,37 @@
   "scripts": {
     "build": "tsdown",
     "dev": "NODE_ENV=development tsdown --watch",
+    "format": "oxfmt",
+    "format:check": "oxfmt --check",
     "generate:meta": "vscode-ext-gen --output src/meta.ts",
     "lint": "eslint",
     "pack": "vsce package --no-dependencies",
     "prepare": "husky",
     "release": "run-s release:check release:version release:publish",
     "release:build": "run-s generate:meta build",
-    "release:check": "run-s lint typecheck",
+    "release:check": "run-s format:check lint typecheck",
     "release:publish": "vsce publish --no-dependencies",
     "release:version": "bumpp --all --execute='pnpm release:build'",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsgo --noEmit",
     "vscode:prepublish": "pnpm run build"
   },
   "dependencies": {
     "ohash": "^2.0.11",
-    "reactive-vscode": "^0.4.1"
+    "reactive-vscode": "^1.0.0-beta.2"
   },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^5.9.0",
-    "@ntnyq/prettier-config": "^3.0.1",
-    "@types/node": "^25.0.9",
-    "@types/vscode": "^1.108.1",
+    "@ntnyq/eslint-config": "^6.0.0-beta.7",
+    "@types/node": "^25.2.0",
+    "@types/vscode": "^1.109.0",
+    "@typescript/native-preview": "^7.0.0-dev.20260204.1",
     "@vscode/vsce": "^3.7.1",
     "bumpp": "^10.4.0",
     "eslint": "^9.39.2",
     "husky": "^9.1.7",
     "nano-staged": "^0.9.0",
     "npm-run-all2": "^8.0.4",
-    "prettier": "3.8.0",
-    "tsdown": "^0.19.0",
+    "oxfmt": "^0.28.0",
+    "tsdown": "^0.20.2",
     "typescript": "^5.9.3",
     "vscode-ext-gen": "^1.5.1"
   },
@@ -215,9 +217,10 @@
     "Other"
   ],
   "engines": {
-    "vscode": "^1.999.0"
+    "vscode": "^1.109.0"
   },
   "nano-staged": {
-    "*.{js,ts,mjs,cjs,md,yml,yaml,json}": "eslint --fix"
+    "*.{js,ts,mjs,md,yml,yaml,json}": "eslint --fix",
+    "*": "oxfmt --no-error-on-unmatched-pattern"
   }
 }
