--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,9 @@
 {
   "recommendations": [
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
     "connor4312.esbuild-problem-matchers",
     "emeraldwalk.runonsave",
-    "oxc.oxc-vscode"
+    "oxc.oxc-vscode",
+    "editorconfig.editorconfig",
+    "typescriptteam.native-preview"
   ]
 }
